npm publish ready

--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "type": "git",
     "url": "git://github.com/wisecolt/subTR.git"
   },
+  "homepage": "https:/github.com/wisecolt/subTR",
   "author": "wisecolt",
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "nodemon": "^1.17.5",
-    "request": "^2.87.0",
+    "request": "^2.87.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5"
   }
 }
