--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "lodash": "^4.17.10",
     "request": "^2.87.0"
   },
   "devDependencies": {
